set z-index on card faces to resolve card flip bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,8 @@ p {
     width: 100%;
     border-radius: 20px;
     backface-visibility: hidden;
-    
+    /* reduce z-index to resolve flip card bug */
+    z-index: -1;
 }
 
 .back {
